// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`McpStatus > renders correctly when discovery is in progress 1`] = `
"⏳ Сервери MCP запускаються (0 ініціалізуються)...
Примітка: перший запуск може зайняти більше часу. Доступність інструментів оновиться автоматично.

Налаштовані сервери MCP:

🟢 server-1 - Готовий (1 інструмент)
A test server
  Інструменти:
  - tool-1
    A test tool
"
`;

exports[`McpStatus > renders correctly with a blocked server 1`] = `
"Налаштовані сервери MCP:

🟢 server-1 - Готовий (1 інструмент)
A test server
  Інструменти:
  - tool-1
    A test tool

🔴 server-1 (з test-extension) - Заблоковано
"
`;

exports[`McpStatus > renders correctly with a connected server 1`] = `
"Налаштовані сервери MCP:

🟢 server-1 - Готовий (1 інструмент)
A test server
  Інструменти:
  - tool-1
    A test tool
"
`;

exports[`McpStatus > renders correctly with a connecting server 1`] = `
"Налаштовані сервери MCP:

🟢 server-1 - Готовий (1 інструмент)
A test server
  Інструменти:
  - tool-1
    A test tool
"
`;

exports[`McpStatus > renders correctly with a disconnected server 1`] = `
"Налаштовані сервери MCP:

🟢 server-1 - Готовий (1 інструмент)
A test server
  Інструменти:
  - tool-1
    A test tool
"
`;

exports[`McpStatus > renders correctly with authenticated OAuth status 1`] = `
"Налаштовані сервери MCP:

🟢 server-1 - Готовий (1 інструмент) (OAuth)
A test server
  Інструменти:
  - tool-1
    A test tool
"
`;

exports[`McpStatus > renders correctly with expired OAuth status 1`] = `
"Налаштовані сервери MCP:

🟢 server-1 - Готовий (1 інструмент) (OAuth прострочено)
A test server
  Інструменти:
  - tool-1
    A test tool
"
`;

exports[`McpStatus > renders correctly with parametersJsonSchema 1`] = `
"Налаштовані сервери MCP:

🟢 server-1 - Готовий (1 інструмент)
A test server
  Інструменти:
  - tool-1
    A test tool
      Параметри:
      {
        "type": "object",
        "properties": {
          "param1": {
            "type": "string"
          }
        }
      }
"
`;

exports[`McpStatus > renders correctly with prompts 1`] = `
"Налаштовані сервери MCP:

🟢 server-1 - Готовий (1 інструмент, 1 підказка)
A test server
  Інструменти:
  - tool-1
    A test tool
  Підказки:
  - prompt-1
    A test prompt
"
`;

exports[`McpStatus > renders correctly with resources 1`] = `
"Налаштовані сервери MCP:

🟢 server-1 - Готовий (1 інструмент, 1 ресурс)
A test server
  Інструменти:
  - tool-1
    A test tool
  Ресурси:
  - resource-1 (file:///tmp/resource-1.txt)
    A test resource
"
`;

exports[`McpStatus > renders correctly with schema enabled 1`] = `
"Налаштовані сервери MCP:

🟢 server-1 - Готовий (1 інструмент)
A test server
  Інструменти:
  - tool-1
    A test tool
      Параметри:
      {
        "type": "object",
        "properties": {
          "param1": {
            "type": "string"
          }
        }
      }
"
`;

exports[`McpStatus > renders correctly with unauthenticated OAuth status 1`] = `
"Налаштовані сервери MCP:

🟢 server-1 - Готовий (1 інструмент) (OAuth не авторизовано)
A test server
  Інструменти:
  - tool-1
    A test tool
"
`;
